--- a/craigslist/package.json
+++ b/craigslist/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "env-cmd node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "puppeteer": "^1.19.0"
+    "env-cmd": "^9.0.3",
+    "mongoose": "^5.6.9",
+    "puppeteer": "^1.19.0",
+    "validator": "^11.1.0"
   }
 }
